fix(reset): fix missing color definition

--- a/packages/reset/src/base/_globals.scss
+++ b/packages/reset/src/base/_globals.scss
@@ -14,6 +14,8 @@ body {
   font-family: 'Museo Sans Rounded', -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol';
+  background-color: #f6f7f8;
+  color: #484c4f;
 }
 
 #root {
